--- a/practice.html
+++ b/practice.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first git repo-1</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h2>my first git repo</h2>
+        <p>Git is a version control system that manages and keeps track of your code. GitHub, on the other hand, is a service that let you host, share, and manage your code files on the internet. GitHub uses Git underneath, and lets you manage your Git repositories or folders easily on its platform></p>
+    </div>
 </body>
 </html>
