added the second and third blog

--- a/practice.html
+++ b/practice.html
@@ -11,5 +11,13 @@
         <h2>my first git repo</h2>
         <p>Git is a version control system that manages and keeps track of your code. GitHub, on the other hand, is a service that let you host, share, and manage your code files on the internet. GitHub uses Git underneath, and lets you manage your Git repositories or folders easily on its platform></p>
     </div>
+    <div>
+        <h2>my second git repo</h2>
+        <p>Git is a version control system that manages and keeps track of your code. GitHub, on the other hand, is a service that let you host, share, and manage your code files on the internet. GitHub uses Git underneath, and lets you manage your Git repositories or folders easily on its platform></p>
+    </div>
+    <div>
+        <h2>my third git repo</h2>
+        <p>Git is a version control system that manages and keeps track of your code. GitHub, on the other hand, is a service that let you host, share, and manage your code files on the internet. GitHub uses Git underneath, and lets you manage your Git repositories or folders easily on its platform></p>
+    </div>
 </body>
 </html>
