added a list to push code

--- a/practice.html
+++ b/practice.html
@@ -19,5 +19,12 @@
         <h2>my third git repo</h2>
         <p>Git is a version control system that manages and keeps track of your code. GitHub, on the other hand, is a service that let you host, share, and manage your code files on the internet. GitHub uses Git underneath, and lets you manage your Git repositories or folders easily on its platform></p>
     </div>
+    <div>
+        <ul>
+            <li>git add.</li>
+            <li>git commit -m"add a meaningful message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
